--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,45 +1,173 @@
-<!-- LOGO -->
-
-<h1 class="logo">STEM News</h1>
-</br>
-
-<!-- NAVIGATION -->
-
-<ul class="nav nav-pills">
-  <li class="active"><a href="#">Home</a></li>
-  <li><a href="#">Categories</a></li>
-  <li><a href="#">About</a></li>
-</ul>
 
 <!-- ARTICLES -->
 
 <% i = 0 %>
-<% @posts.each do |post| %>
+<% @posts.reverse.each do |post| %>
 <% i += 1 %>
+<% if i >= 10 %>
+  <% i -= 1 %>
+  <% break %>
 <% end %>
-<% @posts.each do |post| %>
-  <% if i >= 10 %>
-    <% i -= 1 %>
-    <% next %>
-  <% end %>
-<div class="post post-<%= i %>">
-  <p><strong><%= post.title %></strong></p>
-  <p>By: <%= post.author %> [<em><%= post.category %></em>]</p>
-  <p><a class="thumbnail"><%= image_tag post.image_url.to_s %></a></p>
-  <p><%= post.summary %></p>
-  <p><%= post.article %></p>
-  <div class="post-options">
-    <%= link_to 'Show', post %>
-    <%= link_to 'Edit', edit_post_path(post) %>
-    <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+
+<% case i %>
+<% when 1 %>
+  <div class="row">
+  <div class="col-md-6">
+	<div class="post post-<%= i %>">
+	  <p><strong><%= post.title %></strong></p>
+	  <p>By: <%= post.author %></p>
+	  <p><a class="thumbnail"><%= image_tag post.image_url.to_s %></a></p>
+	  <p><%= post.summary %></p>
+	  <div class="post-options">
+		<%= link_to 'Show', post %>
+		<%= link_to 'Edit', edit_post_path(post) %>
+		<%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+	  </div>
+	  </br>
+	  </br>
+	</div>
   </div>
-  </br>
-  </br>
-</div>
-<% i -= 1 %>
+
+<% when 2 %>
+  <div class="col-md-3">
+	<div class="post post-<%= i %>">
+	  <p><strong><%= post.title %></strong></p>
+	  <p>By: <%= post.author %></p>
+	  <p><a class="thumbnail"><%= image_tag post.image_url.to_s %></a></p>
+	  <p><%= post.summary %></p>
+	  <div class="post-options">
+		<%= link_to 'Show', post %>
+		<%= link_to 'Edit', edit_post_path(post) %>
+		<%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+	  </div>
+	  </br>
+	  </br>
+	</div>
+  </div>
+
+<% when 3 %>
+  <div class="col-md-3">
+	<div class="post post-<%= i %>">
+	  <p><strong><%= post.title %></strong></p>
+	  <p>By: <%= post.author %></p>
+	  <p><a class="thumbnail"><%= image_tag post.image_url.to_s %></a></p>
+	  <p><%= post.summary %></p>
+	  <div class="post-options">
+		<%= link_to 'Show', post %>
+		<%= link_to 'Edit', edit_post_path(post) %>
+		<%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+	  </div>
+	  </br>
+	  </br>
+	</div>
+  </div>
+  </div>
+
+<% when 4 %>
+  <div class="row">
+  <div class="col-md-2">
+	<div class="post post-<%= i %>">
+	  <p><a class="thumbnail"><%= image_tag post.image_url.to_s %></a></p>
+	  <p><strong><%= post.title %></strong></p>
+	  <p><%= post.summary %></p>
+	  <div class="post-options">
+		<%= link_to 'Show', post %>
+		<%= link_to 'Edit', edit_post_path(post) %>
+		<%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+	  </div>
+	  </br>
+	  </br>
+	</div>
+  </div>
+
+<% when 5 %>
+  <div class="col-md-2">
+	<div class="post post-<%= i %>">
+	  <p><a class="thumbnail"><%= image_tag post.image_url.to_s %></a></p>
+	  <p><strong><%= post.title %></strong></p>
+	  <p><%= post.summary %></p>
+	  <div class="post-options">
+		<%= link_to 'Show', post %>
+		<%= link_to 'Edit', edit_post_path(post) %>
+		<%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+	  </div>
+	  </br>
+	  </br>
+	</div>
+  </div>
+
+<% when 6 %>
+  <div class="col-md-2">
+	<div class="post post-<%= i %>">
+	  <p><a class="thumbnail"><%= image_tag post.image_url.to_s %></a></p>
+	  <p><strong><%= post.title %></strong></p>
+	  <p><%= post.summary %></p>
+	  <div class="post-options">
+		<%= link_to 'Show', post %>
+		<%= link_to 'Edit', edit_post_path(post) %>
+		<%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+	  </div>
+	  </br>
+	  </br>
+	</div>
+  </div>
+
+<% when 7 %>
+  <div class="col-md-2">
+	<div class="post post-<%= i %>">
+	  <p><a class="thumbnail"><%= image_tag post.image_url.to_s %></a></p>
+	  <p><strong><%= post.title %></strong></p>
+	  <p><%= post.summary %></p>
+	  <div class="post-options">
+		<%= link_to 'Show', post %>
+		<%= link_to 'Edit', edit_post_path(post) %>
+		<%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+	  </div>
+	  </br>
+	  </br>
+	</div>
+  </div>
+
+<% when 8 %>
+  <div class="col-md-2">
+	<div class="post post-<%= i %>">
+	  <p><a class="thumbnail"><%= image_tag post.image_url.to_s %></a></p>
+	  <p><strong><%= post.title %></strong></p>
+	  <p><%= post.summary %></p>
+	  <div class="post-options">
+		<%= link_to 'Show', post %>
+		<%= link_to 'Edit', edit_post_path(post) %>
+		<%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+	  </div>
+	  </br>
+	  </br>
+	</div>
+  </div>
+
+<% when 9 %>
+  <div class="col-md-2">
+	<div class="post post-<%= i %>">
+	  <p><a class="thumbnail"><%= image_tag post.image_url.to_s %></a></p>
+	  <p><strong><%= post.title %></strong></p>
+	  <p><%= post.summary %></p>
+	  <div class="post-options">
+		<%= link_to 'Show', post %>
+		<%= link_to 'Edit', edit_post_path(post) %>
+		<%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+	  </div>
+	  </br>
+	  </br>
+	</div>
+  </div>
+  </div>
+
+<% end %>
 <% end %>
 
+<!-- FOOTER -->
 
-<%= link_to 'New Post', new_post_path %>
-
-</br>
+<nav class="navbar navbar-static-bottom navbar-inverse footer" role="navigation">
+  <ul class="nav navbar-nav navbar-right">
+    <li><a href="/posts/new">New Post</li>
+  </ul>
+</nav>
