--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,12 +44,9 @@
         </ul>
       </li>
     </ul>
-    <form class="navbar-form navbar-right hidden-xs" role="search">
-      <div class="form-group">
-        <input type="text" class="form-control" placeholder="Search">
-      </div>
-      <button type="submit" class="btn btn-default">Submit</button>
-    </form>
+    <div class="navbar-options btn btn-danger navbar-right"><a href="#">Edit Articles</a></div>
+    <div class="navbar-options navbar-option-2 btn btn-info navbar-right"><a href="/posts/new">Submit Post</a></div>
+    <div></div>
   </div><!-- /.navbar-collapse -->
 </nav>
 
