--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -3,8 +3,17 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 // =================================
-// IMAGE THUMBNAILS
+// IMAGES
 // ================================= 
+  
+.header-image {
+	width: 100%;
+	margin-top: 0px;
+	margin-bottom: 50px;
+	position: fixed;
+	z-index: -10;
+	min-width: 1100px;
+}
    
 .thumbnail {
     width: 200px;
@@ -14,10 +23,18 @@
 // PAGE LAYOUT
 // ================================= 
 
+.main-body {
+	padding-top: 19.3%;
+}
+
+.main-background {
+	background-color: #FAFAFA;
+	padding: 20px;
+}
+
 .yield {
-    margin-top: 80px;
-    margin-left: 40px;
-    margin-right: 40px;
+    margin-top: 0px;
+    min-width: 1100px;
 }
 
 .footer {
@@ -30,6 +47,41 @@
 // =================================
 // PAGE STYLE
 // ================================= 
+
+.nav-tabs {
+	margin-top: -59px;
+}
+
+.nav-tabs li a:visited {
+	color: white;
+}
+
+.nav-tabs li {
+	color: white;
+}
+
+.nav-tabs .active a:hover {
+	color: black;
+	cursor: pointer;
+}
+
+.nav-tabs .active a:visited {
+	color: black;
+}
+
+.nav-tabs .active {
+	color: #848484;
+}
+
+.navbar {
+	border-radius: 0px;
+	display: none;
+}
+
+.navbar .thumbnail {
+	height: 50px;
+	width: 50px;
+}
 
 .navbar-option-2 {
 	margin-right: 15px;
