--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,15 +8,13 @@
 </head>
 <body>
 
-<!-- PAGE YIELD -->
+<!-- HEADER -->
 
-<div class="yield">
-  <%= yield %>
-</div>
+<img class="header-image" src="assets/stemnewsheader.jpg"/>
 
 <!-- NAVIGATION -->
 
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-default" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
@@ -43,12 +41,23 @@
           <li><a href="#">Other</a></li>
         </ul>
       </li>
-    </ul>
+</ul>
     <div class="navbar-options btn btn-danger navbar-right"><a href="#">Edit Articles</a></div>
     <div class="navbar-options navbar-option-2 btn btn-info navbar-right"><a href="/posts/new">Submit Post</a></div>
     <div></div>
   </div><!-- /.navbar-collapse -->
 </nav>
 
+
 </body>
 </html>
+
+
+
+
+<!-- PAGE YIELD -->
+
+<div class="yield">
+  <%= yield %>
+</div>
+
