--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,67 @@
-<h1>Editing post</h1>
+<div class="form"> 
+<div class="container">
+<div class="well">
 
-<%= render 'form' %>
+
+
+<h1>Editing post</h1><br>
+
+<%= form_for(@post, :html => {:multipart => true}) do |f| %>
+	<% if @post.errors.any? %>
+		<div id="error_explanation">
+		<h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
+		<ul>
+			<% @post.errors.full_messages.each do |msg| %>
+		<li><%= msg %></li>
+	<% end %>
+</ul>
+</div>
+<% end %>
+
+<div class="field">
+	<%= f.label :title %><br>
+	<%= f.text_field :title %>
+</div>
+<div class="field">
+	<%= f.label :author %><br>
+	<%= f.text_field :author %>
+</div>
+<div class="field">
+	<%= f.label :category %><br>
+	<%= f.text_field :category %>
+</div>
+<div class="field">
+	<%= f.label :summary %><br>
+	<%= f.text_area :summary %>
+</div>
+<div class="field">
+	<%= f.label :article %><br>
+	<%= f.text_area :article %>
+</div>
+<div class="field">
+	<%= f.label :sources %><br>
+	<%= f.text_area :sources %>
+</div>
+<div class="field">
+	<%= f.label :image %><br>
+	<p><a class="thumbnail edit-thumbnail"><img src="<%= @post.image %>"/></a></p>
+	<%= f.file_field :image %>
+</div>
+<div class="field">
+	<%= f.label :edited %><br>
+	<%= f.check_box :edited %>
+</div>
+<div class="actions">
+	<%= f.submit %>
+</div>
+<% end %>
 
 <%= link_to 'Show', @post %> |
-<%= link_to 'Back', posts_path %>
+<%= link_to 'Back', admin_path %>
+<br><br>
+
+
+
+</div>
+</div>
+</div>
