--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,13 @@
-<h1>New post</h1>
+<div class="form">
+<div class="container">
+<div class="well">
+
+<h1>New post</h1><br>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', posts_path %>
+
+</div>
+</div>
+</div>
