IDK WHAT I DID YO

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -19,8 +19,6 @@
     width: 200px;
 }
 
-
-
 // =================================
 // PAGE LAYOUT
 // ================================= 
@@ -128,5 +126,9 @@
 .post .thumbnail {
     cursor: pointer;
 }
+
+// =================================
+// SNAP HEADER
+// =================================
 
 
