--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,14 @@
 </head>
 <body>
 
+<!-- PAGE YIELD -->
 
+<div class="yield">
+  <%= yield %>
+</div>
+
+
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" charset="utf-8"></script>
 
 </body>
 </html>
@@ -16,9 +23,4 @@
 
 
 
-<!-- PAGE YIELD -->
-
-<div class="yield">
-  <%= yield %>
-</div>
 
