--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -59,6 +59,10 @@
   <% next %>
 <% end %>
 
+<% if i > 3 %>
+  <% break %>
+<% end %>
+
 <% if post.edited != 1 || post.category != "News" %>
   <% i -= 1 %>
   <% next %>
@@ -77,14 +81,171 @@
 	</div>
 
 <% end %>
+</div>
 
 
+<!-- STUDENT LIFE CATEGORY -->
+<div class="col-md-4">
+<p><strong> Student Life </strong></p>
 
+<% i = 0 %>
+
+<% @posts.reverse.each do |post| %>
+
+<% i += 1 %>
+
+<% if i == 1 %>
+  <% next %>
+<% end %>
+
+<% if i > 3 %>
+  <% break %>
+<% end %>
+
+<% if post.edited != 1 || post.category != "Student Life" %>
+  <% i -= 1 %>
+  <% next %>
+<% end %>
+
+	<div class="post post-news">
+	  <p><a class="thumbnail"><%= image_tag post.image_url.to_s %></a></p>
+	  <p><strong><%= post.title %></strong></p>
+	  <p>By: <%= post.author %></p>
+	  <p><%= post.summary %></p>
+	  <div class="post-options">
+		<%= link_to 'Read More', post %>
+	  </div>
+	</br>
+	</br>
+	</div>
+
+<% end %>
+</div>
+
+</div>
+<div class="row">
+
+<!-- OPINION CATEGORY -->
+<div class="col-md-4">
+<p><strong> Opinion </strong></p>
+
+<% i = 0 %>
+
+<% @posts.reverse.each do |post| %>
+
+<% i += 1 %>
+
+<% if i == 1 %>
+  <% next %>
+<% end %>
+
+<% if i > 3 %>
+  <% break %>
+<% end %>
+
+<% if post.edited != 1 || post.category != "Opinion" %>
+  <% i -= 1 %>
+  <% next %>
+<% end %>
+
+	<div class="post post-news">
+	  <p><a class="thumbnail"><%= image_tag post.image_url.to_s %></a></p>
+	  <p><strong><%= post.title %></strong></p>
+	  <p>By: <%= post.author %></p>
+	  <p><%= post.summary %></p>
+	  <div class="post-options">
+		<%= link_to 'Read More', post %>
+	  </div>
+	</br>
+	</br>
+	</div>
+
+<% end %>
+</div>
+
+<!-- COMMUNITY CATEGORY -->
+<div class="col-md-4">
+<p><strong> Community </strong></p>
+
+<% i = 0 %>
+
+<% @posts.reverse.each do |post| %>
+
+<% i += 1 %>
+
+<% if i == 1 %>
+  <% next %>
+<% end %>
+
+<% if i > 3 %>
+  <% break %>
+<% end %>
+
+<% if post.edited != 1 || post.category != "Community" %>
+  <% i -= 1 %>
+  <% next %>
+<% end %>
+
+	<div class="post post-news">
+	  <p><a class="thumbnail"><%= image_tag post.image_url.to_s %></a></p>
+	  <p><strong><%= post.title %></strong></p>
+	  <p>By: <%= post.author %></p>
+	  <p><%= post.summary %></p>
+	  <div class="post-options">
+		<%= link_to 'Read More', post %>
+	  </div>
+	</br>
+	</br>
+	</div>
+
+<% end %>
+</div>
+
+<!-- ARCHIVES CATEGORY -->
+<div class="col-md-4">
+<p><strong> Archives </strong></p>
+
+<% i = 0 %>
+
+<% @posts.reverse.each do |post| %>
+
+<% i += 1 %>
+
+<% if i == 1 %>
+  <% next %>
+<% end %>
+
+<% if i > 3 %>
+  <% break %>
+<% end %>
+
+<% if post.edited != 1 || post.category != "Archives" %>
+  <% i -= 1 %>
+  <% next %>
+<% end %>
+
+	<div class="post post-news">
+	  <p><a class="thumbnail"><%= image_tag post.image_url.to_s %></a></p>
+	  <p><strong><%= post.title %></strong></p>
+	  <p>By: <%= post.author %></p>
+	  <p><%= post.summary %></p>
+	  <div class="post-options">
+		<%= link_to 'Read More', post %>
+	  </div>
+	</br>
+	</br>
+	</div>
+
+<% end %>
+</div>
+
+</div>
 
 <div class="post-options"><a href="/posts/new">Submit Post</a></div>
 <div class="post-options"><a href="/admin">Editor Sign-in</a></div>
 
 </div>
 </div>
-
 </div>
+
+
