--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -3197,10 +3197,10 @@ textarea.input-group-sm > .input-group-btn > .btn {
   margin-right: 2px;
   line-height: 1.428571429;
   border: 1px solid transparent;
-  border-radius: 4px 4px 0 0;
+  border-radius: 4px;
 }
 .nav-tabs > li > a:hover {
-  background-color: #FAFAFA;
+  background-color: grey;
   color: black;
 }
 .nav-tabs > li > a:hover:visited {
@@ -3211,8 +3211,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .nav-tabs > li.active > a:hover,
 .nav-tabs > li.active > a:focus {
   color: #555555;
-  background-color: #FAFAFA;
-  border: 1px solid #FAFAFA;
+  background-color: lightgrey;
   border-bottom-color: transparent;
   cursor: default;
 }
