--- a/app/views/posts/admin.html.erb
+++ b/app/views/posts/admin.html.erb
@@ -1,23 +1,53 @@
+<!-- NAVIGATION -->
+
+<nav class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation">
+  <!-- Brand and toggle get grouped for better mobile display -->
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand" href="#">STEM News</a>
+  </div>
+
+  <!-- Collect the nav links, forms, and other content for toggling -->
+  <div class="collapse navbar-collapse navbar-ex1-collapse">
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Home</a></li>
+      <li><a href="#">Archives</a></li>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Categories <b class="caret"></b></a>
+        <ul class="dropdown-menu">
+          <li><a href="#">News</a></li>
+          <li><a href="#">Student Life</a></li>
+          <li><a href="#">Opinion</a></li>
+          <li><a href="#">Community</a></li>
+        </ul>
+      </li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="#">Submit Post</a></li>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Actions<b class="caret"></b></a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Edit Articles</a></li>
+          <li><a href="#">Another action</a></li>
+          <li><a href="#">Something else here</a></li>
+          <li><a href="#">Separated link</a></li>
+        </ul>
+      </li>
+    </ul>
+  </div><!-- /.navbar-collapse -->
+</nav>
+
 <!-- HEADER -->
 
 <img class="header-image" src="assets/stemnewsheader.jpg"/>
 
 <div class="main-body">
 <div class="main-background">
-
-<!-- NAVIGATION -->
-
-<ul class="nav nav-tabs">
-<li><a href="<%= posts_url %>">Home</a></li>
-<li><a href="#">News</a></li>
-<li><a href="#">Student Life</a></li>
-<li><a href="#">Opinion</a></li>
-<li><a href="#">Community</a></li>
-<li><a href="#">Archives</a></li>
-</ul>
-</br>
-</br>
-</br>
 
 <div class="container">
 
