--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,25 +1,55 @@
+<!-- NAVIGATION -->
+
+<nav class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation">
+  <!-- Brand and toggle get grouped for better mobile display -->
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand">STEM News</a>
+  </div>
+
+  <!-- Collect the nav links, forms, and other content for toggling -->
+  <div class="collapse navbar-collapse navbar-ex1-collapse">
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="<%= posts_path %>">Home</a></li>
+      <li><a href="/archives">Archives</a></li>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Categories <b class="caret"></b></a>
+        <ul class="dropdown-menu">
+          <li><a href="/news">News</a></li>
+          <li><a href="/studentlife">Student Life</a></li>
+          <li><a href="/opinion">Opinion</a></li>
+          <li><a href="/community">Community</a></li>
+        </ul>
+      </li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="/posts/new">Submit Post</a></li>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Actions<b class="caret"></b></a>
+        <ul class="dropdown-menu">
+          <li><a href="/admin">Edit Articles</a></li>
+          <li><a href="#">Another action</a></li>
+          <li><a href="#">Something else here</a></li>
+          <li><a href="#">Separated link</a></li>
+        </ul>
+      </li>
+    </ul>
+  </div><!-- /.navbar-collapse -->
+</nav>
+
 <!-- HEADER -->
 
-<img class="header-image hidden-xs hidden-sm" src="assets/stemnewsheader.jpg"/>
-
-
+<img class="header-image visible-lg" src="assets/stemnewsheader.jpg"/>
 
 <div class="main-body">
 <div class="main-background">
 
-<!-- NAVIGATION -->
-
-<ul class="nav nav-tabs hidden-xs hidden-sm">
-  <li class="active"><a href="#">Home</a></li>
-  <li><a href="/news">News</a></li>
-  <li><a href="#">Student Life</a></li>
-  <li><a href="#">Opinion</a></li>
-  <li><a href="#">Community</a></li>
-  <li><a href="#">Archives</a></li>
-</ul>
-</br>
-</br>
-</br>
+<div class="media-fix hidden-lg"></div>
 
 <!-- PRIMARY ARTICLE -->
 
@@ -33,8 +63,7 @@
 
 <div class="row">
 	<div class="col-md-4">
-	<p><strong> Top Story </strong></p>
-		<div class="post post-1">
+		<div class="post-main post-large visible-lg">
 			<p><a class="thumbnail hidden-xs hidden-sm"><%= image_tag post.image_url.to_s %></a></p>
 			<h2><strong><%= post.title %></strong></h2>
 			<p>By: <%= post.author %></p>
@@ -42,7 +71,16 @@
 			<div class="post-options">
 			  <%= link_to 'Read More', post %>
 			</div>
-	</div></br></br>
+		</div>
+		<div class="post-main post-small hidden-lg">
+			<p><a class="thumbnail hidden-xs hidden-sm"><%= image_tag post.image_url.to_s %></a></p>
+			<h2><strong><%= post.title %></strong></h2>
+			<p>By: <%= post.author %></p>
+			<p><%= post.summary %></p>
+			<div class="post-options">
+			  <%= link_to 'Read More', post %>
+			</div>
+		</div>
 	</div>
 	
 <% break %>
@@ -79,9 +117,7 @@
 	  <div class="post-options">
 		<%= link_to 'Read More', post %>
 	  </div>
-	</br>
-	</br>
-	</div>
+	</div><br>
 
 <% end %>
 </div>
@@ -118,9 +154,7 @@
 	  <div class="post-options">
 		<%= link_to 'Read More', post %>
 	  </div>
-	</br>
-	</br>
-	</div>
+	</div><br>
 
 <% end %>
 </div>
@@ -159,9 +193,7 @@
 	  <div class="post-options">
 		<%= link_to 'Read More', post %>
 	  </div>
-	</br>
-	</br>
-	</div>
+	</div><br>
 
 <% end %>
 </div>
@@ -197,9 +229,7 @@
 	  <div class="post-options">
 		<%= link_to 'Read More', post %>
 	  </div>
-	</br>
-	</br>
-	</div>
+	</div><br>
 
 <% end %>
 </div>
@@ -235,9 +265,7 @@
 	  <div class="post-options">
 		<%= link_to 'Read More', post %>
 	  </div>
-	</br>
-	</br>
-	</div>
+	</div><br>
 
 <% end %>
 </div>
